<resources>
    <string name="app_name" translatable="false">Lugares</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Mapa</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_Correo">Correo (xxxx@abc.com)</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="msg_Telefono">Telefono (9999-9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_Agregar">Agregar</string>
    <string name="bt_actualiza">Actualiza</string>
    <string name="todo">TODO</string>
    <string name="nombre_del_lugar">Nombre del lugar</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="msg_firebase_add">Lugar agregado</string>
    <string name="msg_firebase_update">Lugar modificado</string>
    <string name="msg_firebase_delete">Lugar eliminado</string>
    <string name="msg_firebase_no_add">ERROR: Lugar no agregado</string>
    <string name="msg_firebase_no_update">ERROR: Lugar no actualizado</string>
    <string name="msg_firebase_no_delete">ERROR: Lugar no eliminado</string>
    <string name="error">Error</string>
    <string name="si"> </string>
    <string name="deleted"> </string>
    <string name="no"> </string>
    <string name="seguroBorrar"> </string>

    <string name="msg_imagens">Imagen del lugar</string>
    <string name="msg_graba_pausa">Graba o pausa grabacion</string>
    <string name="msg_escucha_audio">Escucha nota de audio</string>
    <string name="msg_delete_nota">Borra nota de audio</string>
    <string name="msg_rec_stop_nota">graba o detiene nota de audio</string>
    <string name="msg_take_photo">Toma foto</string>
    <string name="msg_rotate_l">Rota a al derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo nota de audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>


    <string name="default_web_client_id_r" translatable="false">113359788611-ch4s89geqb5im4lsspin4aihi63qf7f6.apps.googleusercontent.com</string>
    <string name="google_maps_key" translatable="false">AIzaSyDkGoIo3T4U3AN8od_BWbzk7Ej3mIhBOF8</string>


</resources>